feat: set language

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -628,7 +628,7 @@ a {
   content: '';
   height: 40px;
   width: 40px;
-  background-image: url("../img/ru.png");
+  /* background-image: url("../img/ru.png"); */
   background-position: center center;
   background-size: 50%;
   background-repeat: no-repeat;
@@ -636,6 +636,9 @@ a {
 
 .language__option--uz::before {
   background-image: url("../img/uz.png");
+}
+.language__option--ru::before {
+  background-image: url("../img/ru.png");
 }
 
 .language__option--active {
